MFB: fix bug #34180, --with-curlwrappers discards stream context options

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@213735 c90b9560-bf6c-de11-be94-00142212c4b1